--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -15,7 +17,10 @@ body {
 
 h1 {
   font-size: 45px;
+  letter-spacing: 4px;
+  font-family: "Bangers", cursive;
   color: #fff;
+  margin: 0 0 0.5em;
 }
 
 canvas {
